# image-to-review-app

./: .env.example  .gitignore  Dockerfile  README.md  design-document.txt  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/models/: job.py
app/routes/: admin.py  health.py  pages.py  uploads.py
app/schemas/: admin.py  analyzer.py  common.py  result.py  upload.py
app/services/: analyzer.py  analyzer_factory.py  analyzer_mode_service.py  article_render_service.py  article_template_service.py  dummy_analyzer.py  extraction_field_service.py  field_extractor.py  file_service.py  fusion_service.py  image_preprocessor.py  ocr_debug_service.py  ocr_service.py  product_analyzer.py  result_service.py  upload_service.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: base.html
app/templates/pages/: admin_analyzer_mode.html  admin_article_template_form.html  admin_article_templates.html  admin_extraction_field_form.html  admin_extraction_fields.html  admin_ocr_test.html  index.html
app/utils/: filenames.py  ids.py  image_checks.py  time.py
config/: article_templates.json  extraction_fields.json
scripts/: dev.sh  lint.sh
tests/: conftest.py  test_admin_analyzer_mode.py  test_admin_fields.py  test_admin_ocr_test.py  test_analyzer_factory.py  test_article_templates.py  test_config.py  test_dummy_analyzer.py  test_dummy_mode_app.py  test_field_extractor.py  test_file_service.py  test_fusion_service.py  test_pages.py  test_product_analyzer.py  test_uploads.py
(+7 files in other folders)
